<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_run"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/run"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_stop"
        android:icon="@android:drawable/ic_media_pause"
        android:title="@string/stop"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_find"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/find"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_import"
        android:title="@string/import_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:title="@string/export_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_font_increase"
        android:title="@string/font_increase"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_font_decrease"
        android:title="@string/font_decrease"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_console"
        android:title="@string/clear_console"
        app:showAsAction="never" />

</menu>
